--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,18 @@
 
 .jumbotron {
     margin: 0;
+}
+
+.control-label{
+    margin-right:0.5rem;
+    margin-bottom:1rem;
+}
+
+.form-control{
+    margin-right:1rem;
+    margin-bottom:1rem;
+}
+
+.form-label{
+    margin-right:1rem;
+}
